--- a/_includes/blog/overlay.html
+++ b/_includes/blog/overlay.html
@@ -4,9 +4,9 @@
         <a class="btn-close">{{ site.data.i18n[site.lang].close }}</a>
         <div class="results">
             <ul>
-                <li><a href="{{ site.paths.categories }}">{{ site.data.i18n[site.lang].categories }}</a></li>
-                <li><a href="{{ site.paths.tags }}">{{ site.data.i18n[site.lang].tags }}</a></li>
-                <li><a href="{{ site.paths.home }}">{{ site.data.i18n[site.lang].about }}</a></li>
+                <li><a href="{{ site.paths.categories | relative_url }}">{{ site.data.i18n[site.lang].categories }}</a></li>
+                <li><a href="{{ site.paths.tags | relative_url }}">{{ site.data.i18n[site.lang].tags }}</a></li>
+                <li><a href="{{ site.paths.home | relative_url }}">{{ site.data.i18n[site.lang].about }}</a></li>
             </ul>
         </div>
     </div>
