--- a/_includes/home/scripts.html
+++ b/_includes/home/scripts.html
@@ -1,5 +1,5 @@
-<script src="/assets/javascripts/jquery.fullPage.min.js"></script>
-<script src="/assets/javascripts/jquery.easing.min.js"></script>
+<script src="{{ site.baseurl }}/assets/javascripts/jquery.fullPage.min.js"></script>
+<script src="{{ site.baseurl }}/assets/javascripts/jquery.easing.min.js"></script>
 <script>
     $(document).ready(function () {
         $.fn.fullpage({
