--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -9,7 +9,7 @@
 
 <head>
     {% include common/meta.html %}
-    <link href='/assets/stylesheets/blog.css' rel="stylesheet" type="text/css">
+    <link href='{{ site.baseurl }}/assets/stylesheets/blog.css' rel="stylesheet" type="text/css">
     {% include common/libraries.html %}
 </head>
 
