--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@
 
 <head>
     {% include common/meta.html %}
-    <link href='/assets/stylesheets/home.css' rel="stylesheet" type="text/css">
+    <link href='{{ site.baseurl }}/assets/stylesheets/home.css' rel="stylesheet" type="text/css">
     {% include common/libraries.html %}
 </head>
 
@@ -33,10 +33,10 @@
 
     <div id="section1" class="section" data-name="social">
         <h1 class="animated hidden">
-            <a class="btn-enter btn-light" data-ga="Enter Blog" href="{{ site.paths.blog }}">{{ site.data.i18n[site.lang].enter_blog }}</a>
+            <a class="btn-enter btn-light" data-ga="Enter Blog" href="{{ site.paths.blog | relative_url }}">{{ site.data.i18n[site.lang].enter_blog }}</a>
         </h1>
         <div class="social-links animated hidden">
-            <a class="btn-light ico-rss" href="/feed.xml" rel="me" target="_blank" title="feed"></a>
+            <a class="btn-light ico-rss" href="{{ site.baseurl }}/feed.xml" rel="me" target="_blank" title="feed"></a>
             {% if site.author.email %}
                 <a class="btn-light ico-gmail" href="mailto:{{ site.author.email }}" rel="me" target="_blank" title="email"></a>
             {% endif %}
