--- a/_sass/simple-texture-blog.scss
+++ b/_sass/simple-texture-blog.scss
@@ -7,7 +7,7 @@
 @import 'simple-texture/common/pace';
 
 html {
-    background: url('/assets/images/theme/noisy_texture_section0-200x200.png') repeat 0 0 #F9F9F9;
+    background: url('../images/theme/noisy_texture_section0-200x200.png') repeat 0 0 #F9F9F9;
 }
 
 body {
