--- a/_sass/simple-texture-home.scss
+++ b/_sass/simple-texture-home.scss
@@ -80,11 +80,11 @@ textarea {
 }
 
 #section0 {
-    background: url('/assets/images/theme/noisy_texture_section0-200x200.png') repeat 0 0 #F0F0F0;
+    background: url('../images/theme/noisy_texture_section0-200x200.png') repeat 0 0 #F0F0F0;
 }
 
 #section1 {
-    background: url('/assets/images/theme/noisy_texture_section1-200x200.png') repeat 0 0 #150E1F;
+    background: url('../images/theme/noisy_texture_section1-200x200.png') repeat 0 0 #150E1F;
 }
 
 #fullPage-nav {
@@ -155,7 +155,7 @@ textarea {
     text-indent: -9999em;
 
     outline: none;
-    background-image: url('/assets/images/theme/btn-more.png');
+    background-image: url('../images/theme/btn-more.png');
     background-repeat: no-repeat;
     background-position: center center;
 
