--- a/_sass/simple-texture/blog/_content.scss
+++ b/_sass/simple-texture/blog/_content.scss
@@ -437,7 +437,7 @@
 
         list-style: none;
 
-        background: url('/assets/images/theme/noisy_texture_section0-200x200.png') repeat #F0F0F0;
+        background: url('../images/theme/noisy_texture_section0-200x200.png') repeat #F0F0F0;
         background-clip: padding-box;
         box-shadow: inset 0 3px 3px rgba(0, 0, 0, .4), 0 3px 0 rgba(255, 255, 255, .4);
 
