--- a/_sass/simple-texture/blog/_header.scss
+++ b/_sass/simple-texture/blog/_header.scss
@@ -39,13 +39,13 @@
             .btn-menu {
                 float: left;
 
-                background: url('/assets/images/theme/btn-menu.png') no-repeat;
+                background: url('../images/theme/btn-menu.png') no-repeat;
             }
 
             .btn-search {
                 float: right;
 
-                background: url('/assets/images/theme/btn-search.png') no-repeat;
+                background: url('../images/theme/btn-search.png') no-repeat;
             }
         }
 
