--- a/_sass/simple-texture/common/_fonts.scss
+++ b/_sass/simple-texture/common/_fonts.scss
@@ -3,21 +3,21 @@
     font-weight: normal;
     font-style: normal;
 
-    src: url('/assets/fonts/bitter-regular-webfont.eot');
-    src: url('/assets/fonts/bitter-regular-webfont.eot?#iefix') format('embedded-opentype'), url('/assets/fonts/bitter-regular-webfont.woff') format('woff'), url('/assets/fonts/bitter-regular-webfont.ttf') format('truetype'), url('/assets/fonts/bitter-regular-webfont.svg#bitterregular') format('svg');
+    src: url('../fonts/bitter-regular-webfont.eot');
+    src: url('../fonts/bitter-regular-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/bitter-regular-webfont.woff') format('woff'), url('../fonts/bitter-regular-webfont.ttf') format('truetype'), url('../fonts/bitter-regular-webfont.svg#bitterregular') format('svg');
 }
 @font-face {
     font-family: 'Junge Regular';
     font-weight: normal;
     font-style: normal;
-    src: url('/assets/fonts/junge-regular-webfont.eot');
-    src: url('/assets/fonts/junge-regular-webfont.eot?#iefix') format('embedded-opentype'), url('/assets/fonts/junge-regular-webfont.woff') format('woff'), url('/assets/fonts/junge-regular-webfont.ttf') format('truetype'), url('/assets/fonts/junge-regular-webfont.svg#jungeregular') format('svg');
+    src: url('../fonts/junge-regular-webfont.eot');
+    src: url('../fonts/junge-regular-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/junge-regular-webfont.woff') format('woff'), url('../fonts/junge-regular-webfont.ttf') format('truetype'), url('../fonts/junge-regular-webfont.svg#jungeregular') format('svg');
 }
 @font-face {
     font-family: 'Ubuntu Condensed';
     font-weight: normal;
     font-style: normal;
 
-    src: url('/assets/fonts/ubuntu-c-webfont.eot');
-    src: url('/assets/fonts/ubuntu-c-webfont.eot?#iefix') format('embedded-opentype'), url('/assets/fonts/ubuntu-c-webfont.woff') format('woff'), url('/assets/fonts/ubuntu-c-webfont.ttf') format('truetype'), url('/assets/fonts/ubuntu-c-webfont.svg#ubuntu_condensedregular') format('svg');
+    src: url('../fonts/ubuntu-c-webfont.eot');
+    src: url('../fonts/ubuntu-c-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/ubuntu-c-webfont.woff') format('woff'), url('../fonts/ubuntu-c-webfont.ttf') format('truetype'), url('../fonts/ubuntu-c-webfont.svg#ubuntu_condensedregular') format('svg');
 }
