--- a/_sass/simple-texture/common/_social-icons.scss
+++ b/_sass/simple-texture/common/_social-icons.scss
@@ -1,4 +1,4 @@
-$base-url: '/assets/images/simple-icons/' !default;
+$base-url: '../images/simple-icons/' !default;
 $size: 48;
 
 @mixin get-ico-image($name) {
