--- a/_includes/blog/header.html
+++ b/_includes/blog/header.html
@@ -5,13 +5,13 @@
                 <ul>
                     <li class="logo nav-link">
                         <button class="btn-menu" data-ga="Menu"></button>
-                        <a href="{{ site.paths.blog }}">{{ site.title }}</a>
+                        <a href="{{ site.paths.blog | relative_url }}">{{ site.title }}</a>
                         <!--[if !IE]> -->
                         <button class="btn-search" data-ga="Search"></button>
                         <!-- <![endif]-->
                     </li>
-                    <li class="nav-link"><a data-ga="Categories" href="{{ site.paths.categories }}">{{ site.data.i18n[site.lang].categories }}</a></li>
-                    <li class="nav-link"><a data-ga="Tags" href="{{ site.paths.tags }}">{{ site.data.i18n[site.lang].tags }}</a></li>
+                    <li class="nav-link"><a data-ga="Categories" href="{{ site.paths.categories | relative_url }}">{{ site.data.i18n[site.lang].categories }}</a></li>
+                    <li class="nav-link"><a data-ga="Tags" href="{{ site.paths.tags | relative_url }}">{{ site.data.i18n[site.lang].tags }}</a></li>
                     <!--[if !IE]> -->
                     <li class="nav-link"><a data-ga="Search" class="btn-search" href="#">{{ site.data.i18n[site.lang].search }}</a></li>
                     <!-- <![endif]-->
