--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@ layout: blog
                             by
                             <a class="author" href="/" rel="author"><span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{% if page.author == null %}{{ site.author.name }}{% else %}{{ page.author }}{% endif %}</span></span></a>
                             <a class="license-icon" rel="license" href="{{ site.blog.cc_license }}" target="_blank">
-                                    <img alt="Creative Commons Licence" style="border-width:0" src="{{ site.blog.cc_license_image }}"  height="16" width="80"/>
+                                    <img alt="Creative Commons Licence" style="border-width:0" src="{{ site.blog.cc_license_image | relative_url }}"  height="16" width="80"/>
                                 </a> {% if page.last_updated %} ({{ site.data.i18n[site.lang].last_updated
                             }}:
                             <time class="date-updated updated" title="{{ page.last_updated | date_to_xmlschema }}" datetime="{{ page.last_updated | date_to_xmlschema }}">{{ page.last_updated }}</time>) {% endif %}
@@ -50,10 +50,10 @@ layout: blog
                     </div>
                     <nav class="pagination">
                         {% if page.previous %}
-                            <a class="internal" data-ga="Previous Post" rel="prev" href="{{ page.previous.url }}" title="{{ site.data.i18n[site.lang].view }} '{{ page.previous.title }}'"> ← {{ page.previous.title }}</a>
+                            <a class="internal" data-ga="Previous Post" rel="prev" href="{{ page.previous.url | relative_url }}" title="{{ site.data.i18n[site.lang].view }} '{{ page.previous.title }}'"> ← {{ page.previous.title }}</a>
                         {% endif %}
                         {% if page.next %}
-                            <a class="internal" data-ga="Next Post" rel="next" href="{{ page.next.url }}" title="{{ site.data.i18n[site.lang].view }} '{{ page.next.title }}'">{{ page.next.title }} → </a>
+                            <a class="internal" data-ga="Next Post" rel="next" href="{{ page.next.url | relative_url }}" title="{{ site.data.i18n[site.lang].view }} '{{ page.next.title }}'">{{ page.next.title }} → </a>
                         {% endif %}
                     </nav>
                 </div>
@@ -62,7 +62,7 @@ layout: blog
                 {% if site.disqus.shortname and page.comments != false %}
                     {% include common/disqus.html %}
                     <div class="comments">
-                        <button class="center-block show-hidden" data-ga="Show Comments" data-disqus-url="{{ site.url }}{{ page.url }}">{{ site.data.i18n[site.lang].show_comments }}</button>
+                        <button class="center-block show-hidden" data-ga="Show Comments" data-disqus-url="{{ page.url | absolute_url }}">{{ site.data.i18n[site.lang].show_comments }}</button>
                         <div id="disqus_thread"></div>
                     </div>
                 {% endif %}
