--- a/_sass/simple-texture/home/_responsive.scss
+++ b/_sass/simple-texture/home/_responsive.scss
@@ -10,7 +10,7 @@
         height: 16px;
         margin-left: -25px;
 
-        background-image: url('/assets/images/theme/btn-more-small.png');
+        background-image: url('../images/theme/btn-more-small.png');
     }
 }
 
