Add ‘Share Post’ label before addthis icons

--- a/_includes/common/addthis.html
+++ b/_includes/common/addthis.html
@@ -1,4 +1,5 @@
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+    <small class="label">{{ site.data.i18n[site.lang].share_post }}</small>
     <a class="btn-share-post addthis_button_email"></a>
     <a class="btn-share-post addthis_button_facebook"></a>
     <a class="btn-share-post addthis_button_google_plusone_share"></a>
