--- a/_sass/simple-texture/blog/_content.scss
+++ b/_sass/simple-texture/blog/_content.scss
@@ -728,6 +728,12 @@
                         filter: alpha(opacity=100);
                     }
                 }
+
+                .label {
+                    float: left;
+
+                    margin-right: 6px;
+                }
             }
         }
     }
