--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -20,8 +20,8 @@ layout: blog
 
             <footer class="unit-foot">
                 <div class="unit-inner unit-foot-inner">
-                    <p class="gotop">
-                        <a class="internal" href="#page">{{ site.data.i18n[site.lang].back_to_top }}</a>
+                    <p>
+                        <a class="internal gotop" href="#page">{{ site.data.i18n[site.lang].back_to_top }}</a>
                     </p>
                 </div>
             </footer>
