--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -46,8 +46,8 @@ layout: blog
             </div>
             <footer class="unit-foot">
                 <div class="unit-inner unit-foot-inner">
-                    <div class="gotop">
-                        <a class="internal" href="#page" title="{{ site.data.i18n[site.lang].back_to_top }}">{{ site.data.i18n[site.lang].back_to_top }}</a>
+                    <div class="post-buttons">
+                        <a class="internal gotop" href="#page" title="{{ site.data.i18n[site.lang].back_to_top }}">{{ site.data.i18n[site.lang].back_to_top }}</a>
                         {% if site.addthis_public_id %}
                             {% include common/addthis.html %}
                         {% endif %}
