--- a/_sass/simple-texture/blog/_content.scss
+++ b/_sass/simple-texture/blog/_content.scss
@@ -707,7 +707,7 @@
             }
         }
 
-        .gotop {
+        .post-buttons {
             margin-bottom: 18px;
 
             .addthis_toolbox {
