Fix text style of tags/categories links in post header

--- a/_sass/simple-texture/blog/_content.scss
+++ b/_sass/simple-texture/blog/_content.scss
@@ -590,6 +590,7 @@
                 a {
                     border: none;
                     background-color: transparent;
+                    color: $color-text;
 
                     &:hover span {
                         background-color: $color-hover;
