Update how footer theme info is displayed
- Rename "copyright" i18n entry to "theme_info"
- Enable example CC license for posts

--- a/_includes/blog/footer.html
+++ b/_includes/blog/footer.html
@@ -7,7 +7,7 @@
                     {% if site.blog.footer_content %}
                         <p>{{ site.blog.footer_content }}</p>
                     {% endif %}
-                    {{ site.data.i18n[site.lang].copyright }}
+                    {{ site.data.i18n[site.lang].theme_info }}
                 </div>
                 <div class="social-links">
                     {% if site.author.email %}
